# glassdoor-reviews-analysis

./: .gitignore  Dockerfile  Fetch data from Glassdoor.txt~  README.md  deploy.sh  docker-compose.yml  get_data.py  get_data_pdf.py  main.py  py_extensions.sh  pyproject.toml  requirements.txt  run.sh  run_analysis.py  setup.sh  vector.py  vector_cv.py  vector_test.py
chroma_cv_db/: chroma.sqlite3
chroma_langchain_db/048e9172-0f5b-4998-a7b1-dce61e11461e/: index_metadata.pickle
chroma_langchain_db/2aee0087-a81f-41ef-baed-92b66f68f0ca/: index_metadata.pickle
chroma_langchain_db/880b1703-326c-476d-bda1-9796b6ce0061/: index_metadata.pickle
