[project]
name = "job-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "pandas>=3.0.2",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.0",
    "sentence-transformers>=5.4.0",
]
