[project]
name = "job-agent"
version = "0.1.0"
description = "Glassdoor reviews RAG analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "pandas>=3.0.2",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.0",
    "sentence-transformers>=5.4.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.black]
line-length = 100
target-version = ['py39']
skip-string-normalization = true

[tool.pylint]
max-line-length = 100
good-names = ["i", "j", "k", "ex", "Run", "_"]
disable = ["C0114", "C0115", "C0116"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
